# AI-Media2Doc

./: .gitignore  README.md  README_EN.md  docker-compose.yaml
backend/: README.md  app.py  env.py  models.py  pyproject.toml  requirements.txt
backend/actions/: asr.py  audio.py  llm.py
backend/routers/: audio.py
backend/utils/: env.py
docs/: sponsors.md
frontend/: package.json
frontend/src/: App.vue  constants.js
frontend/src/apis/: http.ts
frontend/src/components/: AppSidebar.vue
frontend/src/components/Settings/: Settings.vue  SettingsAbout.vue  SettingsOther.vue  SettingsScreenshot.vue
frontend/src/components/VideoToMarkdown/: ChatPanel.vue  GeneratedContentPanel.vue  ResultsArea.vue  TaskDetail.vue  TranscriptionPanel.vue  UploadSection.vue  index.vue
frontend/src/utils/: db.js  ffmpeg.js
