[project]
name = "video2markdown"
version = "0.1.0"
description = ""
authors = [
    {name = "hanshuaikang",email = "1758504262@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
